# node/src/config/swagger.yaml
@@ -49,7 +49,7 @@ components:
             properties:
               message:
                 type: string
-                example: Forbidden
+                example: User testuser does not have permission to acl_hello
               error:
                 type: object
                 properties:
@@ -82,7 +82,7 @@ paths:
                   type: string
                   example: testuser
       responses:
-        '201':
+        "201":
           description: 회원가입 성공
           content:
             application/json:
@@ -105,11 +105,11 @@ paths:
                         example: testuser
                       created_at:
                         type: string
-                        example: '2024-01-01T00:00:00.000Z'
+                        example: "2024-01-01T00:00:00.000Z"
                       updated_at:
                         type: string
-                        example: '2024-01-01T00:00:00.000Z'
-        '400':
+                        example: "2024-01-01T00:00:00.000Z"
+        "400":
           description: 회원가입 실패
           content:
             application/json:
@@ -137,7 +137,7 @@ paths:
                   type: string
                   example: password123
       responses:
-        '200':
+        "200":
           description: 로그인 성공
           content:
             application/json:
@@ -153,7 +153,7 @@ paths:
                         type: string
                       refreshToken:
                         type: string
-        '400':
+        "400":
           description: 로그인 실패
           content:
             application/json:
@@ -170,7 +170,7 @@ paths:
       security:
         - bearerAuth: []
       responses:
-        '200':
+        "200":
           description: 로그아웃 성공
           content:
             application/json:
@@ -179,7 +179,7 @@ paths:
                 properties:
                   message:
                     type: string
-        '401':
+        "401":
           description: 로그아웃 실패
           content:
             application/json:
@@ -211,7 +211,7 @@ paths:
                   example: refreshToken123
                   required: true
       responses:
-        '200':
+        "200":
           description: 토큰 갱신 성공
           content:
             application/json:
@@ -227,7 +227,7 @@ paths:
                         type: string
                       refreshToken:
                         type: string
-        '401':
+        "401":
           description: 토큰 갱신 실패
           content:
             application/json:
@@ -243,9 +243,9 @@ paths:
         - books
       description: Fetches a list of books from the database.
       responses:
-        '200':
+        "200":
           description: A sucessful response with an array of books.
-        '500':
+        "500":
           description: Internal server error.
   /book/{id}:
     get:
@@ -260,11 +260,11 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: A sucessful response with the requested book.
-        '404':
+        "404":
           description: Book not found.
-        '500':
+        "500":
           description: Internal server error.
   /protected/hello:
     get:
@@ -277,7 +277,7 @@ paths:
       security:
         - bearerAuth: []
       responses:
-        '200':
+        "200":
           description: A greeting message
           content:
             application/json:
@@ -287,10 +287,10 @@ paths:
                   message:
                     type: string
                     example: Hello from protected route
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-        '403':
-          $ref: '#/components/responses/ForbiddenError'
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+        "403":
+          $ref: "#/components/responses/ForbiddenError"
   /protected/acl_hello:
     get:
       summary: Protected hello endpoint, with ACL -
@@ -302,7 +302,7 @@ paths:
       security:
         - bearerAuth: []
       responses:
-        '200':
+        "200":
           description: A greeting message
           content:
             application/json:
@@ -324,7 +324,7 @@ paths:
                       username:
                         type: string
                         example: admin
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-        '403':
-          $ref: '#/components/responses/ForbiddenError'
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+        "403":
+          $ref: "#/components/responses/ForbiddenError"
